# ROS_Projects

./: .gitignore  ROS_Projects.sln
Rex_ROS_Core/: CMakeLists.txt  MyTemplate.vstemplate  package.xml  rex_core-Debug.vgdbsettings  rex_core-Release.vgdbsettings  rex_core.vcxproj  rex_core.vcxproj.filters
Rex_ROS_Core/LAUNCH/: default.launch
Rex_ROS_Core/SRC/: rex_core.cpp
rex_core/: CMakeLists.txt  CMakeLists.txt.old  gcc_Debug.old00  gcc_Release.h  package.xml  rex_core-Debug.vgdbsettings  rex_core-Release.vgdbsettings  rex_core.vcxproj  rex_core.vcxproj.filters
rex_core/launch/: default.launch
rex_core/src/: rex_core.cpp
rex_gridmap_buffer/: CMakeLists.txt  package.xml  rex_gridmap_buffer-Debug.vgdbsettings  rex_gridmap_buffer-Release.vgdbsettings  rex_gridmap_buffer.vcxproj  rex_gridmap_buffer.vcxproj.filters
rex_gridmap_buffer/launch/: bag.launch  default.launch
rex_gridmap_buffer/src/: rex_gridmap_buffer.cpp
rex_gridmapping/: CMakeLists.txt  package.xml  rex_gridmapping-Debug.vgdbsettings  rex_gridmapping-Release.vgdbsettings  rex_gridmapping.vcxproj  rex_gridmapping.vcxproj.filters
rex_gridmapping/config/elevation_maps/: elev_rex.yaml
rex_gridmapping/config/visualization/: fused.yaml
rex_gridmapping/elevation_mapping/: CMakeLists.txt  package.xml  rex_gridmapping-Debug.vgdbsettings  rex_gridmapping-Release.vgdbsettings  rex_gridmapping.vcxproj  rex_gridmapping.vcxproj.filters
rex_gridmapping/elevation_mapping/cfg/: dyn_rex_gridmapping.cfg
rex_gridmapping/elevation_mapping/config/: custom_rosconsole.conf
rex_gridmapping/elevation_mapping/config/elevation_maps/: elev_rex.yaml  map_DevZed.yaml  map_Hand.yaml  map_rex.yaml  map_zed.yaml  pcd.yaml
rex_gridmapping/elevation_mapping/config/robots/: none.yaml  robot_Hand.yaml  robot_rex.yaml
rex_gridmapping/elevation_mapping/config/sensor_processors/: sens_zed.yaml  stereo2.yaml  stereo2_indoors.yaml  stereo2_rex.yaml  stereo2_zed.yaml
rex_gridmapping/elevation_mapping/config/visualization/: raw.yaml
rex_gridmapping/elevation_mapping/include/elevation_mapping/sensor_processors/: Stereo2SensorProcessor.hpp
rex_gridmapping/elevation_mapping/launch/: fake_tf.launch  pcd.launch  zedDevPipe.launch  zedHandPipe.launch  zedPipe.launch  zedRex.launch
rex_gridmapping/elevation_mapping/src/: ElevationMapping.cpp
rex_gridmapping/elevation_mapping/src/sensor_processors/: Stereo2SensorProcessor.cpp
rex_gridmapping/include/rex_gridmapping/: ElevationMapping.hpp  RobotMotionMapUpdater.hpp
rex_gridmapping/include/rex_gridmapping/sensor_processors/: KinectSensorProcessor.hpp  LaserSensorProcessor.hpp  PerfectSensorProcessor.hpp  Stereo2SensorProcessor.hpp  StereoSensorProcessor.hpp
rex_gridmapping/launch/: visualization.launch  zed.launch
rex_gridmapping/src/: ElevationMap.cpp  ElevationMapping.cpp  RobotMotionMapUpdater.cpp  elevation_mapping_node.cpp
rex_gridmapping/src/sensor_processors/: KinectSensorProcessor.cpp  LaserSensorProcessor.cpp  PerfectSensorProcessor.cpp  SensorProcessorBase.cpp  Stereo2SensorProcessor.cpp  StereoSensorProcessor.cpp
rex_ground_calib/: CMakeLists.txt  gcc_Debug.h  package.xml  rex_ground_calib-Debug.vgdbsettings  rex_ground_calib-Release.vgdbsettings  rex_ground_calib.vcxproj  rex_ground_calib.vcxproj.filters
rex_ground_calib/include/rex_ground_calib/: rex_ground_calib.hpp
rex_ground_calib/launch/: custom_rosconsole.conf  default.launch
rex_ground_calib/src/: rex_ground_calib.cpp
rex_interface/: CMakeLists.txt  package.xml  rex_interface-Debug.vgdbsettings  rex_interface-Release.vgdbsettings  rex_interface.vcxproj  rex_interface.vcxproj.filters
rex_interface/include/rex_interface/: rex_interface.hpp
rex_interface/launch/: default.launch  rexPipe.launch  rexPipe_safe.launch
rex_interface/src/: rex_interface.cpp  rex_interface_node.cpp
rex_interface/srv/: stepQuery.srv
rex_model/: CMakeLists.txt  package.xml  rex_model-Debug.vgdbsettings  rex_model.vcxproj  (+3 more)
rex_odom2pose/: CMakeLists.txt  package.xml  rex_odom2pose-Debug.vgdbsettings  rex_odom2pose-Release.vgdbsettings  rex_odom2pose.vcxproj  rex_odom2pose.vcxproj.filters
rex_odom2pose/launch/: default.launch  zedPipe.launch
rex_odom2pose/src/: rex_odom2pose.cpp
rex_synthetic/: CMakeLists.txt  gcc_Release.h  package.xml  rex_synthetic-Debug.vgdbsettings  rex_synthetic-Release.vgdbsettings  rex_synthetic.vcxproj  rex_synthetic.vcxproj.filters
rex_synthetic/config/: image_to_gridmap_demo.yaml
rex_synthetic/include/rex_synthetic/: rex_synthetic.hpp
rex_synthetic/launch/: default.launch
rex_synthetic/scripts/: image_publisher.py
rex_synthetic/src/: main.cpp  rex_synthetic.cpp
rex_traversibility/: CMakeLists.txt  package.xml  rex_traversibility-Debug.vgdbsettings  rex_traversibility-Release.vgdbsettings  rex_traversibility.vcxproj  rex_traversibility.vcxproj.filters
rex_traversibility/config/: filter_parameter_img.yaml  filter_parameter_pcd.yaml  filter_parameter_rex.yaml  filter_parameter_zed.BAK  filter_parameter_zed.yaml  filter_parameter_zed_SMALLGRID.yaml  filter_parameter_zed_demostairs_on_rex.yaml  robot_buffer.yaml  robot_footprint.yaml  robot_pcd.yaml  robot_rex.yaml  robot_zed.yaml
rex_traversibility/include/rex_traversibility/: TraversabilityEstimation.hpp
rex_traversibility/include/traversability_estimation/: TraversabilityMap.hpp
rex_traversibility/launch/: bagPipe.launch  buffer.launch  default.launch  imgPipe.launch  pcd.launch  traversability_estimation.launch  visualization.launch  zedPipe.launch  zedRex.launch
rex_traversibility/src/: TraversabilityEstimation.cpp  TraversabilityMap.cpp  traversability_estimation_node.cpp
rex_zed_wrapper/: CMakeLists.txt  package.xml  rex_zed_wrapper-Debug.vgdbsettings  rex_zed_wrapper-Release.vgdbsettings  rex_zed_wrapper.vcxproj  rex_zed_wrapper.vcxproj.filters
rex_zed_wrapper/cfg/: Zed.cfg
rex_zed_wrapper/include/rex_zed_wrapper/: ZedConfig.h
rex_zed_wrapper/launch/: default.launch  ekf.launch  zed.launch  zed_ground_calib.launch  zed_tf.launch
rex_zed_wrapper/src/: rex_zed_wrapper.cpp  zed_wrapper_node.cpp
(+36 files in other folders)
