<?xml version="1.0"?>
<package>
  <name>rex_core</name>
  <version>0.0.0</version>
  <description>REX base example project</description>

  <maintainer email="manu.lange@rexbionics.com">Manu Lange</maintainer>

  <license>GNU</license>

  <url type="website">https://github.com/nznobody/</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>