<?xml version="1.0"?>
<package format="2">
  <name>rex_gridmapping</name>
  <version>0.2.1</version>
  <description>rex_gridmapping project created at 7/28/2016 11:03:07 AM,
	fork of rex_gridmapping, original author: Peter Frankhauser</description>

  <maintainer email="manu.lange@rexbionics.com">Manu Lange</maintainer>

  <license>GNU</license>
  
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>

  <url type="website">http://github.com/ethz-asl/rex_gridmapping</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>sm_common</depend>
  <depend>sm_timing</depend>

</package>