<?xml version="1.0"?>
<package>
  <name>rex_ground_calib</name>
  <version>0.0.0</version>
  <description>rex_ground_calib project created at 7/26/2016 9:21:51 PM</description>

  <maintainer email="manu.lange@rexbionics.com">Manu Lange</maintainer>

  <license>GNU</license>

  <url type="website">https://github.com/nznobody/</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs-all</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>eigen</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>eigen</run_depend>

</package>