<?xml version="1.0"?>
<package>
  <name>rex_odom2pose</name>
  <version>0.0.0</version>
  <description>rex_odom2pose project created at 7/27/2016 4:11:18 PM</description>

  <maintainer email="manu.lange@rexbionics.com">Manu Lange</maintainer>

  <license>GNU</license>

  <url type="website">https://github.com/nznobody/</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>

</package>