<?xml version="1.0"?>
<package>
  <name>rex_traversibility</name>
  <version>0.0.0</version>
  <description>rex_traversibility project created at 7/29/2016 7:08:04 PM</description>

  <maintainer email="manu.lange@rexbionics.com">Manu Lange</maintainer>

  <license>GNU</license>

  <url type="website">https://github.com/nznobody/</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_filters</build_depend>
  <build_depend>traversability_msgs</build_depend>
  <build_depend>traversability_estimation_filters</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sm_timing</build_depend>
  <build_depend>kindr</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_core</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>grid_map_filters</run_depend>
  <run_depend>traversability_msgs</run_depend>
  <run_depend>traversability_estimation_filters</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sm_timing</run_depend>

</package>