<?xml version="1.0"?>
<package>
  <name>rex_zed_wrapper</name>
  <version>0.0.0</version>
  <description>rex_zed_wrapper project created at 7/27/2016 5:04:56 PM</description>

  <maintainer email="manu.lange@rexbionics.com">Manu Lange</maintainer>

  <license>GNU</license>

  <url type="website">https://github.com/nznobody/</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>tf2_ros</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pcl_conversions</run_depend>

</package>